--- a/public_html/templates/home.html
+++ b/public_html/templates/home.html
@@ -88,7 +88,7 @@
 						8:00pm
 					</p>
 				</div>
-				<a href="#" data-toggle="modal" data-target="#attendingConfirmation">
+				<a href="#" data-toggle="modal" data-target="#attending-event">
 					<div class="card-footer">
 						<small class="text-muted align-content-center"><i class="fa fa-users" aria-hidden="true"></i>
 							Attend Event
