--- a/public_html/templates/create-event.html
+++ b/public_html/templates/create-event.html
@@ -1,94 +1,113 @@
-<!-- Create Event Modal -->
-<div class="modal fade" id="createEvent" tabindex="-1" role="dialog" aria-labelledby="createEventLabel"
-	  aria-hidden="true">
-	<div class="modal-dialog" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h5 class="modal-title" id="createEventLabel">Create Event</h5>
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-					<span aria-hidden="true">&times;</span>
-				</button>
-			</div>
-			<div class="modal-body">
-				<form #createEventForm="ngForm" class="form-horizontal well" name="createEventForm" id="createEventForm"
-						(ngSubmit)="createEvent();" novalidate>
-					<!-- Event Name -->
-					<div class="form-group">
-						<label for="eventName" class="col-form-label">Event Name:</label>
-						<input type="text" class="form-control" id="eventName" required [(ngModel)]="event.eventName"
-								 #eventName="ngModel" maxlength="64" [ngModelOptions]="{standalone: true}">
-					</div>
-
-					<!-- Event Detail -->
-					<div class="form-group">
-						<label for="eventDetail" class="col-form-label">Event Detail:</label>
-						<input type="text" class="form-control" id="eventDetail" required [(ngModel)]="event.eventDetail"
-								 #eventDetail="ngModel" maxlength="500" [ngModelOptions]="{standalone: true}">
-					</div>
-
-					<!-- Event Price -->
-					<div class="form-group">
-						<label for="eventPrice" class="col-form-label">Event Price:</label>
-						<input type="number" min="0" max="10,000" step="0.01" class="form-control" id="eventPrice" required
-								 [(ngModel)]="event.eventPrice" #eventPrice="ngModel"
-								 maxlength="7" [ngModelOptions]="{standalone: true}">
-					</div>
-
-					<!-- Event Image -->
-					<div class="form-group">
-						<label for="eventImage" class="col-form-label">Event Image:</label>
-						<input type="text" class="form-control" id="eventImage" required [(ngModel)]="event.eventImage"
-								 #eventImage="ngModel" maxlength="255" [ngModelOptions]="{standalone: true}">
-					</div>
-
-					<!-- Event Address -->
-					<div class="form-group">
-						<label for="eventAddress" class="col-form-label">Address:</label>
-						<input type="text" class="form-control" id="eventAddress" required
-								 [(ngModel)]="event.eventAddress" #eventAddress="ngModel" maxlength="255"
-								 [ngModelOptions]="{standalone: true}">
-					</div>
-
-					<!-- Event Start Time -->
-					<div class="container">
-						<div class="row">
-								<div class="input-control">
-									<label for="startDate">Basic:</label>
-									<owl-date-time [(ngModel)]="startDate" [inputId]="'startDate'"></owl-date-time>
-								</div>
+	<!-- Create Event Modal -->
+	<div class="modal fade" id="createEvent" tabindex="-1" role="dialog" aria-labelledby="createEventLabel" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="createEventLabel">Create Event</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<form class="form-horizontal" name="createEventForm" id="createEventForm" [formGroup]="createEventForm" novalidate (ngSubmit)="createEvent();">
+						<!-- Event Name -->
+						<div class="form-group">
+							<label for="eventName" class="col-form-label">Event Name:</label>
+							<input type="text" class="form-control" id="eventName" formControlName="eventName">
 						</div>
-					</div>
-
-					<!-- Event End Date -->
-					<div class="container">
-						<div class="row">
-							<div class="input-control">
-								<label for="endDate">Basic:</label>
-								<owl-date-time [(ngModel)]="endDate" [inputId]="'endDate'" [ngModelOptions]="{standalone: true}"></owl-date-time>
-							</div>
+						<!-- Angular Validation -->
+						<div class="alert alert-danger" *ngIf="createEventForm.controls.eventName?.invalid && createEventForm.controls.eventName?.touched">
+							<p *ngIf="createEventForm.controls.eventName?.errors.maxlength">Event Name is too long</p>
+							<p *ngIf="createEventForm.controls.eventName?.errors.required">Event Name is required</p>
 						</div>
-					</div>
+
+						<!-- Last Name -->
+						<div class="form-group">
+							<label for="eventDetail" class="col-form-label">Event Detail::</label>
+							<input type="text" class="form-control" id="eventDetail" formControlName="eventDetail">
+						</div>
+						<!-- Angular Validation -->
+						<div class="alert alert-danger" *ngIf="createEventForm.controls.eventDetail?.invalid && createEventForm.controls.eventDetail?.touched">
+							<p *ngIf="createEventForm.controls.eventDetail?.errors.maxlength">Event Detail is too long</p>
+							<p *ngIf="createEventForm.controls.eventDetail?.errors.required">Event Detail is required</p>
+						</div>
+
+						<!-- Event Price -->
+						<div class="form-group">
+							<label for="eventPrice" class="col-form-label">Event Price:</label>
+							<input type="number" min="0" max="10,000" step="0.01" class="form-control" id="eventPrice" formControlName="eventPrice">
+						</div>
+						<!-- Angular Validation -->
+						<div class="alert alert-danger" *ngIf="createEventForm.controls.eventPrice?.invalid && createEventForm.controls.eventPrice?.touched">
+							<p *ngIf="createEventForm.controls.eventPrice?.errors.maxlength">Event Price is too long</p>
+							<p *ngIf="createEventForm.controls.eventPrice?.errors.required">Event Price is required</p>
+						</div>
+
+						<!-- Event Image -->
+						<div class="form-group">
+							<label for="eventImage" class="col-form-label">Event Image:</label>
+							<input type="image" class="form-control" id="eventImage" formControlName="eventImage">
+						</div>
+						<!-- Angular Validation -->
+						<div class="alert alert-danger" *ngIf="createEventForm.controls.eventImage?.invalid && createEventForm.controls.eventImage?.touched">
+							<p *ngIf="createEventForm.controls.eventImage?.errors.maxlength">Event Image is too long</p>
+							<p *ngIf="createEventForm.controls.eventImage?.errors.required">Event Image is required</p>
+						</div>
+
+						<!-- Event Address -->
+						<div class="form-group">
+							<label for="eventAddress" class="col-form-label">Address:</label>
+							<textarea type="text" class="form-control" id="eventAddress" formControlName="eventAddress"></textarea>
+						</div>
+						<!-- Angular Validation -->
+						<div class="alert alert-danger" *ngIf="createEventForm.controls.eventAddress?.invalid && createEventForm.controls.eventAddress?.touched">
+							<p *ngIf="createEventForm.controls.eventAddress?.errors.maxlength">Address is too long</p>
+							<p *ngIf="createEventForm.controls.eventAddress?.errors.required">Address required</p>
+						</div>
+
+						<!-- Event Start Time -->
+						<div class="form-group">
+							<label for="eventStartDateTime" class="col-form-label">Event Start Time:</label>
+							<input type="datetime-local" class="form-control" id="eventStartDateTime" formControlName="eventStartDateTime" >
+						</div>
+						<!-- Angular Validation -->
+						<div class="alert alert-danger" *ngIf="createEventForm.controls.eventStartDateTime?.invalid && createEventForm.controls.profilePassword?.touched">
+							<p *ngIf="createEventForm.controls.eventStartDateTime?.errors.maxlength">Start Date is too long</p>
+							<p *ngIf="createEventForm.controls.eventStartDateTime?.errors.required">Start Date required</p>
+						</div>
+
+						<!-- Event End Date -->
+						<div class="form-group">
+							<label for="eventEndDateTime" class="col-form-label">Event End Date:</label>
+							<input type="datetime-local" class="form-control" id="eventEndDateTime" formControlName="eventEndDateTime">
+						</div>
+						<!-- Angular Validation -->
+						<div class="alert alert-danger" *ngIf="createEventForm.controls.eventEndDateTime?.invalid && createEventForm.controls.eventEndDateTime?.touched">
+							<p *ngIf="createEventForm.controls.eventEndDateTime?.errors.maxlength">End Date is too long</p>
+							<p *ngIf="createEventForm.controls.eventEndDateTime?.errors.required">End Date required</p>
+						</div>
 
 						<!-- Event Attendee Limit -->
-						<div class="form-group">
+						 <div class="form-group">
 							<label for="eventAttendeeLimit" class="col-form-label">Event Attendee Limit:</label>
-							<input type="number" class="form-control" id="eventAttendeeLimit"
-									 required [(ngModel)]="event.eventAttendeeLimit" #eventAttendeeLimit="ngModel" maxlength="32"
-									 [ngModelOptions]="{standalone: true}">
-						</div>
+							<input type="number" class="form-control" id="eventAttendeeLimit" formControlName="eventAttendeeLimit">
+						 </div>
+						 <div class="alert alert-danger" *ngIf="createEventForm.controls.eventAttendeeLimit?.invalid && createEventForm.controls.eventAttendeeLimit?.touched">
+						 <p *ngIf="createEventForm.controls.eventAttendeeLimit?.errors.maxlength">Event Attendee Limit is too long</p>
+						 <p *ngIf="createEventForm.controls.eventAttendeeLimit?.errors.required">Event Attendee Limit</p>
+						 </div>
 						<div class="modal-footer">
 							<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-							<button type="submit" id="submit" [disabled]="createEventForm.invalid" class="btn btn-info">Create
-								Event
-							</button>
+							<button type="submit" id="submit" name="signUp" class="btn btn-info">Sign Up</button>
 						</div>
-				</form>
-			</div>
-			<div *ngIf="status !== null" class="alert alert-dismissible" [ngClass]="status.type" role="alert">
-				<button type="button" class="close" aria-label="Close" (click)="status = null;"><span aria-hidden="true">&times;</span>
-				</button>
-				{{ status.message }}
+					</form>
+				</div>
+
+				<div *ngIf="status !== null" class="alert alert-dismissible" [ngClass]="status.type" role="alert">
+					<button type="button" class="close" aria-label="Close" (click)="status = null;"><span
+						aria-hidden="true">&times;</span></button>
+					{{ status.message }}
+				</div>
 			</div>
 		</div>
 	</div>
-</div>
