removed var dump

--- a/public_html/templates/profile.html
+++ b/public_html/templates/profile.html
@@ -65,10 +65,8 @@
 						<small class="text-muted">@:</small>
 						D Rinkers Pub
 					</p>
-					<p class="card-text my-1">363 Palmer Ave Ne</p>
-					<p class="card-text my-1">Fun Town</p>
-					<p class="card-text my-1">89933</p>
-					<p class="card-text my-1">
+					<p class="card-text my-1">{{event.eventAddress}}</p>
+
 						<small class="text-muted">Starts:</small>
 						{{event.eventStartDateTime}}
 					</p>
