--- a/public_html/templates/image.html
+++ b/public_html/templates/image.html
@@ -5,4 +5,4 @@
 	</div>
 	<button type="submit" class="btn btn-info btn-lg"><i class="fa fa-file-image-o" aria-hidden="true"></i> Upload Image</button>
 </form>
-<p>Cloudinary Public Id: {{ cloudinaryPublicId }}</p>
+<p>Cloudinary Public Id: {{ cloudinarySecureUrl }}</p>
