--- a/public_html/templates/event.html
+++ b/public_html/templates/event.html
@@ -31,11 +31,11 @@
 						<p class="card-text my-1">89933</p>
 						<p class="card-text my-1">
 							<small class="text-muted">Starts:</small>
-							{{event.startDate}}
+							{{event.eventStartDateTime}}
 						</p>
 						<p class="card-text my-1">
 							<small class="text-muted">Ends:</small>
-							{{event.endDate}}
+							{{event.eventEndDateTime}}
 						</p>
 						<p class="card-text my-1">
 							<small class="text-muted">Price:</small>
