--- a/public_html/templates/landing-page.html
+++ b/public_html/templates/landing-page.html
@@ -1,16 +1,18 @@
-<main-nav></main-nav>
-<div class="container" id="landing-page">
-	<div class="row">
-		<div class="col-lg-12">
-			<div class="content">
-				<h1>CrowdVibe</h1>
-				<h3>The Spontaneous Social Media App</h3>
-				<hr>
-				<button type="button" class="btn-default btn-secondary btn-lg" data-toggle="modal" data-target="#join">
-					<i class="fa fa-users fa-fw"></i> Start Vibing
-				</button>
-				<sign-up></sign-up>
-				<sign-in></sign-in>
+<div id="landing-page">
+	<main-nav></main-nav>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="content">
+					<h1>CrowdVibe</h1>
+					<h3>The Spontaneous Social Media App</h3>
+					<hr>
+					<button type="button" class="btn-default btn-secondary btn-lg" data-toggle="modal" data-target="#join">
+						<i class="fa fa-users fa-fw"></i> Start Vibing
+					</button>
+					<sign-up></sign-up>
+					<sign-in></sign-in>
+				</div>
 			</div>
 		</div>
 	</div>
