--- a/public_html/templates/home.html
+++ b/public_html/templates/home.html
@@ -1,10 +1,9 @@
 <!-- Selectors -->
 <create-event></create-event>
-<attending-event></attending-event>
 <edit-profile></edit-profile>
 <edit-event></edit-event>
 <login-nav></login-nav>
-<div class="container py-4 bg-dark">
+<div class="container-fluid py-4 bg-dark">
 	<div class="row mx-0">
 		<div class="col-md-4 align-content-center">
 			<div class="card">
@@ -18,13 +17,12 @@
 					<img class="rounded-circle m-0"
 						  src="https://dl.dropboxusercontent.com/s/s05h8qapt3p00kn/face.jpg?dl=0" height="100"
 						  width="100">
-					<h4 class="card-title my-0">Zach Spangler</h4>
+					<h4 class="card-title my-0">{{ profile.profileFirstName }}</h4>
 					<p class="card-text mb-1">
 					<p class="fa fa-star" aria-hidden="true"><i class="fa fa-star-half" aria-hidden="true"></i></p>
-					<p class="card-text mb-1 text-muted">zspang</p>
-					<p class="card-text my-0">zaspangler@gmail.com</p>
-					<p class="card-text my-1">I love to play sports specifically lightsaber dueling and drink
-						beer.</p>
+					<p class="card-text mb-1 text-muted">{{ profile.profileUserName }}</p>
+					<p class="card-text my-0">{{ profile.profileEmail }}</p>
+					<p class="card-text my-1">{{ profile.profileBio }}</p>
 				</div>
 				<div class="card-footer">
 					<a href="#" data-toggle="modal" data-target="#editProfile">
@@ -46,46 +44,43 @@
 				</div>
 			</div>
 		</div>
-
 		<div class="col-md-6 mb-4">
 			<div>
-				<button type="button" class="btn btn-outline-primary w-100 mb-2" data-toggle="modal"
+				<button type="button" class="btn btn-outline-warning w-100 mb-2" data-toggle="modal"
 						  data-target="#createEvent"><i class="fa fa-plus" aria-hidden="true"></i> Create
 					An Event
 				</button>
 				<a href="#" class="sticky-top">
 				</a>
 			</div>
-			<div class="card event">
-				<img class="card-img-top" src="https://dl.dropboxusercontent.com/s/9ojadnxp8n2b7oq/bar.jpg?dl=0"
-					  alt="Card image cap">
+			<div *ngFor="let event of events" class="card mb-3">
+				<img class="card-img-top" src="{{ event.eventImage }}" alt="Card image cap">
 				<div class="card-body text-center">
-					<img class="rounded-circle"
-						  src="https://dl.dropboxusercontent.com/s/s05h8qapt3p00kn/face.jpg?dl=0"
-						  height="100" width="100">
+					<img class="rounded-circle" src="{{ profile.profileImage }}" height="100" width="100">
 					<p class="card-text">
 						<small class="text-muted">Hosted By: Zach</small>
 					</p>
 					<p class="card-text mb-1">
 					<p class="fa fa-star" aria-hidden="true"><i class="fa fa-star-half" aria-hidden="true"></i></p>
-					<h4 class="card-title">Happy Hour</h4>
+					<h4 class="card-title">{{ event.eventName }}</h4>
+					<p class="card-text">{{ event.eventAddress }}</p>
 					<p class="card-text">Some co-workers are getting together for a drink, we would love to meet
 						some new people in town.</p>
 					<p class="card-text my-1">
 						<small class="text-muted">Price:</small>
-						Free
+						${{ event.eventPrice }}
 					</p>
 					<p class="card-text my-1">
 						<small class="text-muted">Attending:</small>
-						5
+						{{ event.eventName }}
 					</p>
 					<p class="card-text my-1">
 						<small class="text-muted">Start Time:</small>
-						6:00pm
+						{{ event.eventStartDateTime }}
 					</p>
 					<p class="card-text my-1">
 						<small class="text-muted">End Time:</small>
-						8:00pm
+						{{ event.eventEndDateTime }}
 					</p>
 				</div>
 				<a href="#" data-toggle="modal" data-target="#attending-event">
@@ -134,57 +129,5 @@
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-4"></div>
-		<div class="col-md-6">
-			<div class="card">
-				<img class="card-img-top"
-					  src="https://dl.dropboxusercontent.com/s/gmr99ec6dbau6uf/baseball.jpg?dl=0"
-					  alt="Card image cap">
-				<div class="card-body text-center">
-					<img class="rounded-circle"
-						  src="https://dl.dropboxusercontent.com/s/5ynm24sbmzavkjw/maria-face.jpg?dl=0"
-						  height="100"
-						  width="100">
-					<p class="card-text">
-						<small class="text-muted mb-0">Hosted By: Maria</small>
-					</p>
-					<p class="card-text m-0">
-					<p class="fa fa-star" aria-hidden="true">
-					<p class="fa fa-star" aria-hidden="true">
-					<p class="fa fa-star" aria-hidden="true">
-					<p class="fa fa-star" aria-hidden="true"><i class="fa fa-star-half" aria-hidden="true"></i></p>
-					<h4 class="card-title">Isotopes Baseball Game</h4>
-					<p class="card-text">Just moved to town from St. Louis, me and one of my close friends
-						are
-						heading to the Isotopes game tonight , would love to make some new friends.</p>
-					<p class="card-text my-1">
-						<small class="text-muted">Price:</small>
-						$15.00
-					</p>
-					<p class="card-text my-1">
-						<small class="text-muted">Attending:</small>
-						3
-					</p>
-					<p class="card-text my-1">
-						<small class="text-muted">Start Time:</small>
-						6:00pm
-					</p>
-					<p class="card-text my-1">
-						<small class="text-muted">End Time:</small>
-						10:00pm
-					</p>
-				</div>
-				<a href="#">
-					<div class="card-footer">
-						<small class="text-muted align-content-center"><i class="fa fa-users" aria-hidden="true"></i>
-							Attend Event
-						</small>
-					</div>
-				</a>
-			</div>
-		</div>
-		<div class="col-md-2"></div>
 	</div>
 </div>
