--- a/public_html/templates/profile.html
+++ b/public_html/templates/profile.html
@@ -27,7 +27,7 @@
 							Rate Me
 						</button>
 						<div class="dropdown-menu" aria-labelledby="dropdownMenu1">
-							<a class="dropdown-item" href="#!">
+							<a class="dropdown-item" href="#">
 								<div class="lines">
 									<i class="fa fa-thermometer-empty fa-2x text-secondary" aria-hidden="true"></i>
 									<i class="fa fa-thermometer-quarter fa-2x text-primary" aria-hidden="true"></i>
@@ -67,6 +67,7 @@
 					</p>
 					<p class="card-text my-1">{{event.eventAddress}}</p>
 
+					<p class="card-text my-1">
 						<small class="text-muted">Starts:</small>
 						{{event.eventStartDateTime}}
 					</p>
