--- a/src/app.css
+++ b/src/app.css
@@ -60,11 +60,31 @@ h4 {
 	background-color: transparent;
 }
 
-/**Landing Page CSS **/
+/**Global **/
 body {
+	background-color: black;
+}
+
+/** Modals **/
+.modal {
+	color: white;
+}
+
+label, .modal-header {
+	color: white;
+}
+
+.btn-white {
+	background-color: #FFA500;
+	border-color: black;
+}
+
+/**Landing Page CSS **/
+#landing-page {
 	background-image: url(https://images.unsplash.com/photo-1497911270199-1c552ee64aa4?auto=format&fit=crop&w=1050&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D);
 	background-size: cover;
 	background-position: center;
+	height: 100vh;
 }
 
 body, html {
