--- a/public_html/templates/sign-up.html
+++ b/public_html/templates/sign-up.html
@@ -1,7 +1,7 @@
 <!-- Modal -->
 <div class="modal fade" id="join" tabindex="-1" role="dialog" aria-labelledby="joinLabel" aria-hidden="true">
 	<div class="modal-dialog" role="document">
-		<div class="modal-content">
+		<div class="modal-content bg-dark">
 			<div class="modal-header">
 				<h5 class="modal-title" id="joinLabel">Sign Up</h5>
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -88,7 +88,6 @@
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-
 						<button type="submit" id="submit" name="signUp" class="btn btn-info">Sign Up</button>
 					</div>
 				</form>
