--- a/public_html/templates/edit-event.html
+++ b/public_html/templates/edit-event.html
@@ -46,7 +46,7 @@
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-				<button type="submit" class="btn btn-primary">Edit Event</button>
+				<button type="submit" class="btn btn-white">Edit Event</button>
 			</div>
 		</div>
 	</div>
