--- a/public_html/templates/edit-profile.html
+++ b/public_html/templates/edit-profile.html
@@ -1,140 +1,99 @@
-<!--&lt;!&ndash; Modal &ndash;&gt;-->
-<!--<div class="modal fade" id="editProfile" tabindex="-1" role="dialog" aria-labelledby="editProfileLabel"-->
-	  <!--aria-hidden="true">-->
-	<!--<div class="modal-dialog" role="document">-->
-		<!--<div class="modal-content">-->
-			<!--<div class="modal-header">-->
-				<!--<h5 class="modal-title" id="editProfileLabel">Edit Your Profile</h5>-->
-				<!--<button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
-					<!--<span aria-hidden="true">&times;</span>-->
-				<!--</button>-->
-			<!--</div>-->
-			<!--<div class="modal-body">-->
-				<!--<form *ngIf="profile" name="editProfileForm" id="editProfileForm" [formGroup]="editProfileForm" (ngSubmit)="editProfile();" novalidate>-->
-					<!--&lt;!&ndash; First Name &ndash;&gt;-->
-					<!--<div class="form-group">-->
-						<!--<label for="profileFirstName" class="col-form-label">First Name:</label>-->
-						<!--<div class="input-group">-->
-							<!--<div class="input-group-addon">-->
-							<!--<input type="text" class="form-control" name="profileFirstName" id="profileFirstName" formControlName="profileFirstName">-->
-						<!--</div>-->
-						<!--</div>-->
-					<!--</div>-->
-					<!--&lt;!&ndash; Angular Validation &ndash;&gt;-->
-					<!--<div class="alert alert-danger"-->
-						  <!--*ngIf="editProfileForm.controls.profileFirstName?.invalid && editProfileForm.controls.profileFirstName?.touched">-->
-						<!--<p *ngIf="editProfileForm.controls.profileFirstName?.errors.maxlength">First Name is too long</p>-->
-						<!--<p *ngIf="editProfileForm.controls.profileFirstName?.errors.required">First Name is required</p>-->
-					<!--</div>-->
+<!-- Modal -->
+<div class="modal fade" id="editProfile" tabindex="-1" role="dialog" aria-labelledby="editProfileLabel" aria-hidden="true">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content bg-dark">
+			<div class="modal-header">
+				<h5 class="modal-title" id="editProfileLabel">Edit Profile</h5>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body">
+				<form class="form-horizontal" name="editProfileForm" id="editProfileForm" [formGroup]="editProfileForm" novalidate (ngSubmit)="editProfile();">
+					<!-- First Name -->
+					<div class="form-group">
+						<label for="profileFirstName" class="col-form-label">First Name:</label>
+						<input type="text" class="form-control" id="profileFirstName" formControlName="profileFirstName">
+					</div>
+					<!-- Angular Validation -->
+					<div class="alert alert-danger" *ngIf="editProfileForm.controls.profileFirstName?.invalid && editProfileForm.controls.profileFirstName?.touched">
+						<p *ngIf="editProfileForm.controls.profileFirstName?.errors.maxlength">First Name is too long</p>
+						<p *ngIf="editProfileForm.controls.profileFirstName?.errors.required">First Name is required</p>
+					</div>
 
-					<!--&lt;!&ndash; Last Name &ndash;&gt;-->
-					<!--<div class="form-group">-->
-						<!--<label for="profileLastName" class="col-form-label">Last Name:</label>-->
-						<!--<div class="input-group">-->
-							<!--<div class="input-group-addon">-->
-							<!--<input type="text" class="form-control" name="profileLastName" id="profileLastName" formControlName="profileLastName">-->
-						<!--</div>-->
-						<!--</div>-->
-					<!--</div>-->
-					<!--&lt;!&ndash; Angular Validation &ndash;&gt;-->
-					<!--<div class="alert alert-danger"-->
-						  <!--*ngIf="editProfileForm.controls.profileLastName?.invalid && editProfileForm.controls.profileLastName?.touched">-->
-						<!--<p *ngIf="editProfileForm.controls.profileLastName?.errors.maxlength">Last Name is too long</p>-->
-						<!--<p *ngIf="editProfileForm.controls.profileLastName?.errors.required">Last Name is required</p>-->
-					<!--</div>-->
+					<!-- Last Name -->
+					<div class="form-group">
+						<label for="profileLastName" class="col-form-label">Last Name:</label>
+						<input type="text" class="form-control" id="profileLastName" formControlName="profileLastName">
+					</div>
+					<!-- Angular Validation -->
+					<div class="alert alert-danger" *ngIf="editProfileForm.controls.profileLastName?.invalid && editProfileForm.controls.profileLastName?.touched">
+						<p *ngIf="editProfileForm.controls.profileLastName?.errors.maxlength">Last Name is too long</p>
+						<p *ngIf="editProfileForm.controls.profileLastName?.errors.required">Last Name is required</p>
+					</div>
 
-					<!--&lt;!&ndash; Username &ndash;&gt;-->
-					<!--<div class="form-group">-->
-						<!--<label for="profileUserName" class="col-form-label">User Name:</label>-->
-						<!--<div class="input-group">-->
-							<!--<div class="input-group-addon">-->
-							<!--<input type="text" class="form-control" name="profileUsername" id="profileUserName" formControlName="profileUserName">-->
-						<!--</div>-->
-						<!--</div>-->
-					<!--</div>-->
-					<!--&lt;!&ndash; Angular Validation &ndash;&gt;-->
-					<!--<div class="alert alert-danger"-->
-						  <!--*ngIf="editProfileForm.controls.profileUserName?.invalid && editProfileForm.controls.profileUserName?.touched">-->
-						<!--<p *ngIf="editProfileForm.controls.profileUserName?.errors.maxlength">Username is too long</p>-->
-						<!--<p *ngIf="editProfileForm.controls.profileUserName?.errors.required">Username is required</p>-->
-					<!--</div>-->
+					<!-- Username -->
+					<div class="form-group">
+						<label for="profileUserName" class="col-form-label">User Name:</label>
+						<input type="text" class="form-control" id="profileUserName" formControlName="profileUserName">
+					</div>
+					<!-- Angular Validation -->
+					<div class="alert alert-danger" *ngIf="editProfileForm.controls.profileUserName?.invalid && editProfileForm.controls.profileUserName?.touched">
+						<p *ngIf="editProfileForm.controls.profileUserName?.errors.maxlength">Username is too long</p>
+						<p *ngIf="editProfileForm.controls.profileUserName?.errors.required">Username is required</p>
+					</div>
 
-					<!--&lt;!&ndash; Profile Image &ndash;&gt;-->
-					<!--<div class="form-group">-->
-						<!--<label for="profileImage" class="col-form-label">Profile Image:</label>-->
-						<!--<div class="input-group">-->
-							<!--<div class="input-group-addon">-->
-							<!--<input type="text" class="form-control" name="profileImage" id="profileImage" formControlName="profileImage">-->
-						<!--</div>-->
-						<!--</div>-->
-					<!--</div>-->
-					<!--&lt;!&ndash; Angular Validation &ndash;&gt;-->
-					<!--<div class="alert alert-danger"-->
-						  <!--*ngIf="editProfileForm.controls.profileImage?.invalid && editProfileForm.controls.profileImage?.touched">-->
-						<!--<p *ngIf="editProfileForm.controls.profileUserName?.errors.maxlength">Username is too long</p>-->
-						<!--<p *ngIf="editProfileForm.controls.profileUserName?.errors.required">Username is required</p>-->
-					<!--</div>-->
+					<!-- Image -->
+					<div class="form-group">
+						<label for="profileImage" class="col-form-label">Image:</label>
+						<input type="email" class="form-control" id="profileImage" formControlName="profileImage">
+					</div>
 
-					<!--&lt;!&ndash; Email &ndash;&gt;-->
-					<!--<div class="form-group">-->
-						<!--<label for="profileEmail" class="col-form-label">Email:</label>-->
-						<!--<div class="input-group">-->
-							<!--<div class="input-group-addon">-->
-							<!--<input type="email" class="form-control" name="profileEmail" id="profileEmail" formControlName="profileEmail">-->
-							<!--</div>-->
-						<!--</div>-->
-					<!--</div>-->
-					<!--&lt;!&ndash; Angular Validation &ndash;&gt;-->
-					<!--<div class="alert alert-danger"-->
-						  <!--*ngIf="editProfileForm.controls.profileEmail?.invalid && editProfileForm.controls.profileEmail?.touched">-->
-						<!--<p *ngIf="editProfileForm.controls.profileEmail?.errors.maxlength">Email is too long</p>-->
-						<!--<p *ngIf="editProfileForm.controls.profileEmail?.errors.required">Email is required</p>-->
-					<!--</div>-->
+					<!-- Email -->
+					<div class="form-group">
+						<label for="profileEmail" class="col-form-label">Email:</label>
+						<input type="email" class="form-control" id="profileEmail" formControlName="profileEmail">
+					</div>
+					<!-- Angular Validation -->
+					<div class="alert alert-danger" *ngIf="editProfileForm.controls.profileEmail?.invalid && editProfileForm.controls.profileEmail?.touched">
+						<p *ngIf="editProfileForm.controls.profileEmail?.errors.maxlength">Email is too long</p>
+						<p *ngIf="editProfileForm.controls.profileEmail?.errors.required">Email is required</p>
+					</div>
 
-					<!--&lt;!&ndash; Bio &ndash;&gt;-->
-					<!--<div class="form-group">-->
-						<!--<label for="profileBio" class="col-form-label">Bio:</label>-->
-						<!--<div class="input-group">-->
-							<!--<div class="input-group-addon">-->
-									<!--<textarea type="text" class="form-control" name="profileBio" id="profileBio" formControlName="profileBio"></textarea>-->
-						<!--</div>-->
-						<!--</div>-->
-					<!--</div>-->
-					<!--&lt;!&ndash; Angular Validation &ndash;&gt;-->
-					<!--<div class="alert alert-danger"-->
-						  <!--*ngIf="editProfileForm.controls.profileBio?.invalid && editProfileForm.controls.profileBio?.touched">-->
-						<!--<p *ngIf="editProfileForm.controls.profileBio?.errors.maxlength">Bio is too long</p>-->
-						<!--<p *ngIf="editProfileForm.controls.profileBio?.errors.required">Bio required</p>-->
-					<!--</div>-->
+					<!-- Bio -->
+					<div class="form-group">
+						<label for="profileBio" class="col-form-label">Bio:</label>
+						<textarea type="text" class="form-control" id="profileBio" formControlName="profileBio"></textarea>
+					</div>
+					<!-- Angular Validation -->
+					<div class="alert alert-danger" *ngIf="editProfileForm.controls.profileBio?.invalid && editProfileForm.controls.profileBio?.touched">
+						<p *ngIf="editProfileForm.controls.profileBio?.errors.maxlength">Bio is too long</p>
+						<p *ngIf="editProfileForm.controls.profileBio?.errors.required">Bio required</p>
+					</div>
 
-					<!--&lt;!&ndash; Password &ndash;&gt;-->
-					<!--<div class="form-group">-->
-						<!--<label for="profilePassword" class="col-form-label">Password:</label>-->
-						<!--<div class="input-group">-->
-							<!--<div class="input-group-addon">-->
-							<!--<input type="password" class="form-control" name="profilePassword" id="profilePassword" formControlName="profilePassword">-->
-						<!--</div>-->
-						<!--</div>-->
-					<!--</div>-->
-					<!--&lt;!&ndash; Angular Validation &ndash;&gt;-->
-					<!--<div class="alert alert-danger"-->
-						  <!--*ngIf="editProfileForm.controls.profilePassword?.invalid && editProfileForm.controls.profilePassword?.touched">-->
-						<!--<p *ngIf="editProfileForm.controls.profilePassword?.errors.maxlength">Password is too long</p>-->
-						<!--<p *ngIf="editProfileForm.controls.profilePassword?.errors.required">Password required</p>-->
-					<!--</div>-->
-					<!--<div class="modal-footer">-->
-						<!--<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>-->
-						<!--<button type="submit" id="profileSaveChanges" name="profileSaveChanges" class="btn btn-info">-->
-							<!--Save Changes-->
-						<!--</button>-->
-					<!--</div>-->
-				<!--</form>-->
-			<!--</div>-->
-			<!--<div *ngIf="status !== null" class="alert alert-dismissible" [ngClass]="status.type" role="alert">-->
-				<!--<button type="button" class="close" aria-label="Close" (click)="status = null;"><span-->
-					<!--aria-hidden="true">&times;</span></button>-->
-				<!--{{ status.message }}-->
-			<!--</div>-->
-		<!--</div>-->
-	<!--</div>-->
-<!--</div>-->
+					<!-- Password -->
+					<div class="form-group">
+						<label for="profilePassword" class="col-form-label">Password:</label>
+						<input type="password" class="form-control" id="profilePassword" formControlName="profilePassword" >
+					</div>
+					<!-- Angular Validation -->
+					<div class="alert alert-danger" *ngIf="editProfileForm.controls.profilePassword?.invalid && editProfileForm.controls.profilePassword?.touched">
+						<p *ngIf="editProfileForm.controls.profilePassword?.errors.maxlength">Password is too long</p>
+						<p *ngIf="editProfileForm.controls.profilePassword?.errors.required">Password required</p>
+					</div>
+
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+						<button type="submit" id="submit" name="signUp" class="btn btn-white">Save Changes</button>
+					</div>
+				</form>
+			</div>
+
+			<div *ngIf="status !== null" class="alert alert-dismissible" [ngClass]="status.type" role="alert">
+				<button type="button" class="close" aria-label="Close" (click)="status = null;"><span
+					aria-hidden="true">&times;</span></button>
+				{{ status.message }}
+			</div>
+		</div>
+	</div>
+</div>
