--- a/public_html/templates/event-attendance-confirmation.html
+++ b/public_html/templates/event-attendance-confirmation.html
@@ -1,20 +1,19 @@
 <!-- Modal -->
-<div class="modal" id="attendanceCheckIn" tabindex="-1" role="dialog" aria-labelledby="attendanceCheckInLabel" aria-hidden="true">
+<div class="modal" id="createEventAttendance" tabindex="-1" role="dialog" aria-labelledby="createEventAttendanceLabel" aria-hidden="true">
 	<div class="modal-dialog" role="document">
-		<div class="modal-content">
+		<div class="modal-content bg-dark">
 			<div class="modal-header">
-				<h5 class="modal-title" id="attendanceCheckInLabel">Are you ready to vibe?</h5>
+				<h5 class="modal-title" id="createEventAttendanceLabel">Are you ready to vibe?</h5>
 			</div>
 			<div class="modal-body">
-				<form #signInForm="ngForm" class="form-horizontal" name="createEventAttendanceForm" id="createEventAttendanceForm" novalidate
-						(ngSubmit)="eventAttendanceNumberAttending">
+				<form class="form-horizontal" name="createEventAttendanceForm" id="createEventAttendanceForm" [formGroup]="createEventAttendanceForm" novalidate (ngSubmit)="createEventAttendance();">
 					<div class="form-group">
-						<label for="eventAttendanceNumberAttending" class="col-form-label">Number Attending?</label>
-						<input type="number" name="eventAttendanceNumberAttending" id="eventAttendanceNumberAttending" required [(ngModel)]=eventAttendance.eventAttendanceNumberAttending #eventAttednanceNumberAttending="ngModel" class="form-control input-sm">
+						<label for="eventAttendanceNumberAttending" class="col-form-label">How many people will be attending {{event.eventName}} </label>
+						<input type="number" class="form-control" id="eventAttendanceNumberAttending" formControlName="eventAttendanceNumberAttending">
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-secondary" data-dismiss="modal">Not Yet!</button>
-						<button type="submit" id="submit" [disabled]="createEventAttnendanceForm.valid" class="btn btn-info">Lets Do It!</button>
+						<button type="submit" id="submit" name="createEventAttendance" class="btn btn-white">Lets Do It!</button>
 					</div>
 				</form>
 			</div>
