--- a/public_html/templates/event.html
+++ b/public_html/templates/event.html
@@ -12,7 +12,7 @@
 							  src="https://dl.dropboxusercontent.com/s/s05h8qapt3p00kn/face.jpg?dl=0"
 							  height="100" width="100">
 						<p class="card-text">
-							<small class="text-muted">Hosted By: {{profile.profileFirstName}}</small>
+							<small class="text-muted">Hosted By: {{ event.eventName }}</small>
 						</p>
 						<div class="text-center">
 							<i class="fa fa-thermometer-three-quarters fa-2x m-2 text-warning" aria-hidden="true"></i>
@@ -21,29 +21,29 @@
 						<div class="text-center">
 							<i class="fa fa-thermometer-full fa-2x m-2 text-danger" aria-hidden="true"></i>
 						</div>
-						<p class="card-text">{{event.eventDetail}}</p>
+						<p class="card-text">{{ event.eventDetail }}</p>
 						<p class="card-text my-1">
 							<small class="text-muted">@:</small>
-							{{event.eventAddress}}
+							{{ event.eventAddress }}
 						</p>
 						<p class="card-text my-1">363 Palmer Ave Ne</p>
 						<p class="card-text my-1">Fun Town</p>
 						<p class="card-text my-1">89933</p>
 						<p class="card-text my-1">
 							<small class="text-muted">Starts:</small>
-							{{event.eventStartDateTime}}
+							{{ event.eventStartDateTime }}
 						</p>
 						<p class="card-text my-1">
 							<small class="text-muted">Ends:</small>
-							{{event.eventEndDateTime}}
+							{{ event.eventEndDateTime }}
 						</p>
 						<p class="card-text my-1">
 							<small class="text-muted">Price:</small>
-							{{event.eventPrice}}
+							{{ event.eventPrice }}
 						</p>
 						<p class="card-text my-1">
 							<small class="text-muted">Attending:</small>
-							{{eventAttendance.eventAttendanceNumberAttending}}
+							{{ event.eventPrice }}
 						</p>
 						<div class="dropdown">
 							<button class="btn btn-secondary dropdown-toggle"
@@ -88,7 +88,7 @@
 													  alt="Card image cap" height="200">
 											</div>
 											<div class="card-body bg-dark text-white">
-												<h6 class="card-title">Hellen Entitled</h6>
+												<h6 class="card-title">Name</h6>
 												<p class="card-subtitle mb-2 text-muted">Rating</p>
 												<div class="text-center">
 													<i class="fa fa-thermometer-three-quarters fa-2x m-4 text-warning"
@@ -96,182 +96,6 @@
 												</div>
 												<button class="btn btn-secondary dropdown-toggle"
 														  type="button" id="dropdownMenu1" data-toggle="dropdown"
-														  aria-haspopup="true" aria-expanded="false">
-													Rate Me
-												</button>
-												<div class="dropdown-menu" aria-labelledby="dropdownMenu1">
-													<a class="dropdown-item" href="#">
-														<div class="lines">
-															<i class="fa fa-thermometer-empty fa-2x text-secondary"
-																aria-hidden="true"></i>
-															<i class="fa fa-thermometer-quarter fa-2x text-primary"
-																aria-hidden="true"></i>
-															<i class="fa fa-thermometer-half fa-2x text-success"
-																aria-hidden="true"></i>
-															<i class="fa fa-thermometer-three-quarters fa-2x text-warning"
-																aria-hidden="true"></i>
-															<i class="fa fa-thermometer-full fa-2x text-danger" aria-hidden="true"></i>
-														</div>
-													</a>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="col-md-6">
-										<div class="card border-0">
-											<img class="card-img-top rounded-circle bg-transparent" src="./image/grrr-man.jpg"
-												  alt="Card image cap" height="200">
-											<div class="card-body bg-dark text-white">
-												<h6 class="card-title">Mean Gene</h6>
-												<p class="card-subtitle mb-2 text-muted">Rating</p>
-												<div class="text-center">
-													<i class="fa fa-thermometer-full fa-2x m-4 text-danger" aria-hidden="true"></i>
-												</div>
-												<button class="btn btn-secondary dropdown-toggle"
-														  type="button" id="dropdownMenu3" data-toggle="dropdown"
-														  aria-haspopup="true" aria-expanded="false">
-													Rate Me
-												</button>
-												<div class="dropdown-menu" aria-labelledby="dropdownMenu1">
-													<a class="dropdown-item" href="#">
-														<div class="lines">
-															<i class="fa fa-thermometer-empty fa-2x text-secondary"
-																aria-hidden="true"></i>
-															<i class="fa fa-thermometer-quarter fa-2x text-primary"
-																aria-hidden="true"></i>
-															<i class="fa fa-thermometer-half fa-2x text-success"
-																aria-hidden="true"></i>
-															<i class="fa fa-thermometer-three-quarters fa-2x text-warning"
-																aria-hidden="true"></i>
-															<i class="fa fa-thermometer-full fa-2x text-danger" aria-hidden="true"></i>
-														</div>
-													</a>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="container mb-2">
-								<div class="row">
-									<div class="col-md-6">
-										<div class="card border-0">
-											<img class="card-img-top rounded-circle bg-transparent" src="./image/paint-man.jpg"
-												  alt="Card image cap" height="200">
-											<div class="card-body bg-dark text-white">
-												<h6 class="card-title">Tommy 2Face</h6>
-												<p class="card-subtitle mb-2 text-muted">Rating</p>
-												<div class="text-center">
-													<i class="fa fa-thermometer-empty fa-2x m-4 text-secondary"
-														aria-hidden="true"></i>
-												</div>
-												<button class="btn btn-secondary dropdown-toggle"
-														  type="button" id="dropdownMenu4" data-toggle="dropdown"
-														  aria-haspopup="true" aria-expanded="false">
-													Rate Me
-												</button>
-												<div class="dropdown-menu" aria-labelledby="dropdownMenu1">
-													<a class="dropdown-item" href="#">
-														<div class="lines">
-															<i class="fa fa-thermometer-empty fa-2x text-secondary"
-																aria-hidden="true"></i>
-															<i class="fa fa-thermometer-quarter fa-2x text-primary"
-																aria-hidden="true"></i>
-															<i class="fa fa-thermometer-half fa-2x text-success"
-																aria-hidden="true"></i>
-															<i class="fa fa-thermometer-three-quarters fa-2x text-warning"
-																aria-hidden="true"></i>
-															<i class="fa fa-thermometer-full fa-2x text-danger" aria-hidden="true"></i>
-														</div>
-													</a>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="col-md-6">
-										<div class="card border-0">
-											<img class="card-img-top rounded-circle bg-transparent" src="./image/funny-man.jpg"
-												  alt="Card image cap" height="200">
-											<div class="card-body bg-dark text-white">
-												<h6 class="card-title">Charles McChuckles</h6>
-												<p class="card-subtitle mb-2 text-muted">Rating</p>
-												<div class="text-center">
-													<i class="fa fa-thermometer-quarter fa-2x m-4 text-primary"
-														aria-hidden="true"></i>
-												</div>
-												<button class="btn btn-secondary dropdown-toggle"
-														  type="button" id="dropdownMenu5" data-toggle="dropdown"
-														  aria-haspopup="true" aria-expanded="false">
-													Rate Me
-												</button>
-												<div class="dropdown-menu" aria-labelledby="dropdownMenu1">
-													<a class="dropdown-item" href="#">
-														<div class="lines">
-															<i class="fa fa-thermometer-empty fa-2x text-secondary"
-																aria-hidden="true"></i>
-															<i class="fa fa-thermometer-quarter fa-2x text-primary"
-																aria-hidden="true"></i>
-															<i class="fa fa-thermometer-half fa-2x text-success"
-																aria-hidden="true"></i>
-															<i class="fa fa-thermometer-three-quarters fa-2x text-warning"
-																aria-hidden="true"></i>
-															<i class="fa fa-thermometer-full fa-2x text-danger" aria-hidden="true"></i>
-														</div>
-													</a>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="container mb-2">
-								<div class="row">
-									<div class="col-md-6">
-										<div class="card border-0">
-											<img class="card-img-top rounded-circle bg-transparent" src="./image/wise-guy.jpg"
-												  alt="Card image cap" height="200">
-											<div class="card-body bg-dark text-white">
-												<h6 class="card-title">Paul</h6>
-												<p class="card-subtitle mb-2 text-muted">Rating</p>
-												<div class="text-center">
-													<i class="fa fa-thermometer-three-quarters fa-2x m-4 text-warning"
-														aria-hidden="true"></i>
-												</div>
-												<button class="btn btn-secondary dropdown-toggle"
-														  type="button" id="dropdownMenu6" data-toggle="dropdown"
-														  aria-haspopup="true" aria-expanded="false">
-													Rate Me
-												</button>
-												<div class="dropdown-menu" aria-labelledby="dropdownMenu1">
-													<a class="dropdown-item" href="#">
-														<div class="lines">
-															<i class="fa fa-thermometer-empty fa-2x text-secondary"
-																aria-hidden="true"></i>
-															<i class="fa fa-thermometer-quarter fa-2x text-primary"
-																aria-hidden="true"></i>
-															<i class="fa fa-thermometer-half fa-2x text-success"
-																aria-hidden="true"></i>
-															<i class="fa fa-thermometer-three-quarters fa-2x text-warning"
-																aria-hidden="true"></i>
-															<i class="fa fa-thermometer-full fa-2x text-danger" aria-hidden="true"></i>
-														</div>
-													</a>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="col-md-6">
-										<div class="card border-0">
-											<img class="card-img-top rounded-circle bg-transparent" src="../../../image/happy-happy.jpg"
-												  alt="Card image cap" height="200">
-											<div class="card-body bg-dark text-white">
-												<h6 class="card-title">Kathy Power</h6>
-												<p class="card-subtitle mb-2 text-muted">Rating</p>
-												<div class="text-center">
-													<i class="fa fa-thermometer-half fa-2x m-4 text-success" aria-hidden="true"></i>
-												</div>
-												<button class="btn btn-secondary dropdown-toggle"
-														  type="button" id="dropdownMenu7" data-toggle="dropdown"
 														  aria-haspopup="true" aria-expanded="false">
 													Rate Me
 												</button>
