adding search view.
https://app.asana.com/0/464883007022852/467623072621766

--- a/public_html/templates/edit-event.html
+++ b/public_html/templates/edit-event.html
@@ -1,9 +1,9 @@
-<!-- Edit Event Modal -->
+ <!-- Edit Event Modal -->
 <div class="modal fade" id="editEvent" tabindex="-1" role="dialog" aria-labelledby="editEventLabel" aria-hidden="true">
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h5 class="modal-title" id="editEventLabel">Edit Event</h5>
+				<h5 class="modal-title bg-warning" id="editEventLabel">Edit Event</h5>
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
