--- a/static-ui/styles.css
+++ b/static-ui/styles.css
@@ -1,4 +1,4 @@
-.landing-page {
+w.landing-page {
 	background-image: url("https://dl.dropboxusercontent.com/s/qo0jbebw4ju7eo7/jens-johnsson-121803.jpg?dl=0");
 	background-position: center;
 	background-repeat: no-repeat;
