updated hompage view

--- a/public_html/templates/event-attendance-confirmation.html
+++ b/public_html/templates/event-attendance-confirmation.html
@@ -8,7 +8,7 @@
 			<div class="modal-body">
 				<form class="form-horizontal" name="createEventAttendanceForm" id="createEventAttendanceForm" [formGroup]="createEventAttendanceForm" novalidate (ngSubmit)="createEventAttendance();">
 					<div class="form-group">
-						<label for="eventAttendanceNumberAttending" class="col-form-label">How many people will be attending {{event.eventName}} </label>
+						<label for="eventAttendanceNumberAttending" class="col-form-label">How many people will be attending?</label>
 						<input type="number" class="form-control" id="eventAttendanceNumberAttending" formControlName="eventAttendanceNumberAttending">
 					</div>
 					<div class="modal-footer">
