--- a/public_html/templates/event.html
+++ b/public_html/templates/event.html
@@ -82,14 +82,15 @@
 							<div class="container mb-2">
 								<div class="row">
 									<div class="col-md-6">
-										<div class="card border-0">
+										<div *ngFor="let attendanceProfile of attendanceProfiles" class="card border-0">
 											<div class="top-picture">
 												<img class="card-img-top rounded-circle" src="./image/look-lady.jpg"
 													  alt="Card image cap" height="200">
 											</div>
 											<div class="card-body bg-dark text-white">
-												<h6 class="card-title">Name</h6>
-												<p class="card-subtitle mb-2 text-muted">Rating</p>
+												<h6 class="card-title">{{ attendanceProfiles.profileFirstName }}</h6>
+												<p class="card-subtitle mb-2 text-muted">{{ attendanceProfiles.profileUsername }}</p>
+												<p class="card-subtitle mb-2 text-muted">{{ attendanceProfiles.profileRating }}</p>
 												<div class="text-center">
 													<i class="fa fa-thermometer-three-quarters fa-2x m-4 text-warning"
 														aria-hidden="true"></i>
