--- a/public_html/templates/sign-in.html
+++ b/public_html/templates/sign-in.html
@@ -1,7 +1,7 @@
 <!-- Modal -->
 <div class="modal" id="login" tabindex="-1" role="dialog" aria-labelledby="loginLabel" aria-hidden="true">
 	<div class="modal-dialog" role="document">
-		<div class="modal-content">
+		<div class="modal-content bg-dark">
 			<div class="modal-header">
 				<h5 class="modal-title" id="loginLabel">Login</h5>
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -13,7 +13,7 @@
 						(ngSubmit)="signIn();">
 					<div class="form-group">
 						<label for="profileEmail" class="col-form-label">Email:</label>
-						<input type="email" name="profileEmail" id="profileEmail" required [(ngModel)]=signin.profileEmail #profileEmail="ngModel" class="form-control input-sm">
+						<input type="email" name="profileEmail" id="profileEmail" required [(ngModel)]="signin.profileEmail" #profileEmail="ngModel" class="form-control input-sm">
 					</div>
 					<div class="form-group">
 						<label for="profilePassword" class="col-form-label">Password:</label>
@@ -21,7 +21,7 @@
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-						<button type="submit" id="submit" [disabled]="signInForm.invalid" class="btn btn-info">Login</button>
+						<button type="submit" id="submit" [disabled]="signInForm.invalid" class="btn btn-white">Login</button>
 					</div>
 				</form>
 			</div>
