--- a/public_html/templates/sign-up.html
+++ b/public_html/templates/sign-up.html
@@ -88,7 +88,7 @@
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-						<button type="submit" id="submit" name="signUp" class="btn btn-info">Sign Up</button>
+						<button type="submit" id="signUp" name="signUp" class="btn btn-info">Sign Up</button>
 					</div>
 				</form>
 			</div>
