changed some column sizes.
https://app.asana.com/0/464883007022852/467623072621766

--- a/public_html/templates/create-event.html
+++ b/public_html/templates/create-event.html
@@ -66,15 +66,17 @@
 						</div>
 
 						<!-- Event Start Time -->
-						<div class="form-group">
+						<div class="form-row">
+						<div class="form-group col-md-6">
 							<label for="eventStartDateTime" class="col-form-label">Event Start Time:</label>
 							<input type="datetime-local" class="form-control" id="eventStartDateTime" formControlName="eventStartDateTime" >
 						</div>
 
 						<!-- Event End Date -->
-						<div class="form-group">
+						<div class="form-group col-md-6">
 							<label for="eventEndDateTime" class="col-form-label">Event End Date:</label>
 							<input type="datetime-local" class="form-control" id="eventEndDateTime" formControlName="eventEndDateTime">
+						</div>
 						</div>
 
 						<!-- Event Attendee Limit -->
