--- a/public_html/templates/main-nav.html
+++ b/public_html/templates/main-nav.html
@@ -5,14 +5,14 @@
 	</button>
 
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
-		<ul class="navbar-nav mr-auto">
-			<li class="nav-item">
-				<a class="nav-link" href="#">About</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="#">Contact</a>
-			</li>
-		</ul>
+		<!--<ul class="navbar-nav mr-auto">-->
+			<!--<li class="nav-item">-->
+				<!--<a class="nav-link" href="#">About</a>-->
+			<!--</li>-->
+			<!--<li class="nav-item">-->
+				<!--<a class="nav-link" href="#">Contact</a>-->
+			<!--</li>-->
+		<!--</ul>-->
 		<ul class="nav navbar-nav ml-auto">
 			<li class="px-2"><a href="#" data-toggle="modal" data-target="#join">Signup <i class="fa fa-user-plus"></i></a></li>
 			<li class="px-2"><a href="#" data-toggle="modal" data-target="#login">Login <i class="fa fa-user"></i></a></li>
