--- a/public_html/templates/searchView.html
+++ b/public_html/templates/searchView.html
@@ -3,21 +3,21 @@
 <div class="row">
 	<div class="col-md-6">
 		<div class="input-group">
-			<input type="number" class="form-control" placeholder="Search By Last Name&hellip;" [(ngModel)]="Search" (keyup)="filterByLastName();" />
+			<input type="text" class="form-control" placeholder="Search By Last Name&hellip;" [(ngModel)]="Search" (keyup)="filterByProfileLastName();" />
 			<span class="input-group-addon"><i class="fa fa-search"></i></span>
 		</div>
 	</div>
 	<div class="col-md-6">
 		<div class="input-group">
-			<input type="text" class="form-control" placeholder="Search By First Name&hellip;" [(ngModel)]="searchNameWordSearch" (keyup)="filterByFirstName();" />
+			<input type="text" class="form-control" placeholder="Search By First Name&hellip;" [(ngModel)]="searchNameWordSearch" (keyup)="filterByProfileFirstName();" />
 			<span class="input-group-addon"><i class="fa fa-search"></i></span>
 		</div>
 	</div>
 </div>
 <table class="table table-bordered table-hover table-responsive table-striped">
 	<tr><th>Search</th><th>Name</th></tr>
-	<tr class="cursor-pointer" *ngFor="let searchStudentName of searchStudentNameFiltered)" (click)="searchStudentName(searchStudentName);">
-		<td>{{ searchStudentName.lastName }}</td>
-		<td>{{ searchStudentName.firstName }}</td>
+	<tr class="cursor-pointer" *ngFor="let searchProfileName of searchProfileNameFiltered)" (click)="searchProfileName(searchProfileName);">
+		<td>{{ searchProfileName.lastName }}</td>
+		<td>{{ searchProfileName.firstName }}</td>
 	</tr>
 </table>
