updated signout and signin to clear JWT caching

--- a/public_html/templates/event.html
+++ b/public_html/templates/event.html
@@ -88,9 +88,9 @@
 													  alt="Card image cap" height="200">
 											</div>
 											<div class="card-body bg-dark text-white">
-												<h6 class="card-title">{{ attendanceProfiles.profileFirstName }}</h6>
-												<p class="card-subtitle mb-2 text-muted">{{ attendanceProfiles.profileUsername }}</p>
-												<p class="card-subtitle mb-2 text-muted">{{ attendanceProfiles.profileRating }}</p>
+												<h6 class="card-title">{{ attendanceProfile.profileFirstName }}</h6>
+												<p class="card-subtitle mb-2 text-muted">{{ attendanceProfile.profileUsername }}</p>
+												<p class="card-subtitle mb-2 text-muted">{{ attendanceProfile.profileRating }}</p>
 												<div class="text-center">
 													<i class="fa fa-thermometer-three-quarters fa-2x m-4 text-warning"
 														aria-hidden="true"></i>
